# vocabu-rex-chatbot-service

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  WRITING_ASSESSMENT_IMPLEMENTATION.md  demo_writing_assessment.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/vectorstore/: index.faiss  index.pkl
mongo-init/: 01-init-indexes.js  02-drop-email-index.js  03-writing-assessment-indexes.js
src/: __init__.py  main.py
src/application/: __init__.py
src/application/dtos/: __init__.py  chat_dtos.py  exercise_generation_dtos.py  exercise_meta_dtos.py  exercise_scoring_dtos.py  image_description_dtos.py  roadmap_generation_dtos.py  roadmap_recommendation_dtos.py  skill_generation_dtos.py  writing_assessment_dtos.py
src/application/use_cases/: __init__.py  chat_use_case.py  exercise_generation_use_case.py  exercise_scoring_use_case.py  image_description_scoring_use_case.py  roadmap_generation_use_case.py  roadmap_recommendation_use_case.py  skill_generation_use_case.py  writing_assessment_use_case.py
src/core/: __init__.py  exceptions.py
src/domain/: __init__.py
src/domain/entities/: conversation.py  message.py  user.py  writing_assessment.py
src/domain/repositories/: __init__.py  chat_repositories.py  conversation_repository.py  user_repository.py  writing_assessment_repository.py
src/domain/services/: ai_service.py  rag_service.py
src/infrastructure/: __init__.py  database_connection.py
src/presentation/: __init__.py
src/shared/: __init__.py  config.py
(+25 files in other folders)
